# hotintel-brain

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
docs/: INDEX.md  STATUS.md  WORKFLOW.md  architecture.md  roadmap.md
docs/adr/: 0001-language-and-runtime.md  0002-rag-on-shared-elasticsearch.md  0003-structured-output-and-agent-framework.md  0004-observability-with-langfuse.md  0005-evaluation-stack.md  0006-llm-provider-selection.md
docs/api/: contract.md
docs/eval/: protocol.md
docs/runbooks/: local-dev.md
docs/specs/: direction.md  three-layer-capability.md
docs/superpowers/plans/: 2026-04-29-v1-judge-slice.md  2026-04-29-v1-second-batch-closeout.md  2026-04-30-l2-full-product-integration.md  2026-04-30-l2-gap-closure-before-l3.md  2026-04-30-l3-follow-up-agent.md
docs/superpowers/specs/: 2026-04-30-l2-full-product-integration-design.md  2026-04-30-l2-gap-closure-before-l3-design.md  2026-04-30-l3-follow-up-agent-design.md
eval/: __init__.py  harness.py  metrics.py  run.py  run_silver.py  silver_metrics.py
eval/reports/: 2026-04-29-sampled-v1-l1-baseline.md  2026-04-30-sampled-v1-20-l1-baseline.md  2026-04-30-sampled-v1-20-silver-baseline.md
infra/langfuse/: README.md  compose.yaml
prompts/: README.md  aggregate_hint_v1.md  expand_v1.md  follow_up_hint_v1.md  judge_v1.md  summarize_v1.md  triage_hint_v1.md
scripts/: sample_from_hotpulse.py
src/: __init__.py
src/api/: main.py  routes_aggregate_hint.py  routes_embed.py  routes_expand.py  routes_follow_up_hint.py  routes_health.py  routes_judge.py  routes_judge_batch.py  routes_summarize.py  routes_triage_hint.py
src/chains/: __init__.py  l1_singleshot.py  l2_rag.py  l3_agent.py  summarize_singleshot.py
src/common/: config.py  models.py  prompt_loader.py
src/llm/: client.py
src/mq/: __init__.py  consumer.py  messages.py  publisher.py  worker.py
src/observability/: langfuse_client.py
src/retrieval/: __init__.py  embeddings.py  es_client.py  reranker.py  retriever.py  types.py
src/tools/: __init__.py  expand_keyword.py  fetch_doc.py  score_one.py  search_history.py
tests/: conftest.py  test_aggregate_hint.py  test_brain_mq.py  test_embed.py  test_eval_harness.py  test_expand.py  test_follow_up_hint.py  test_health.py  test_judge.py  test_judge_batch.py  test_judge_smoke.py  test_l3_agent.py  test_langfuse_client.py  test_llm_client.py  test_models.py  test_retrieval.py  test_sample_from_hotpulse.py  test_silver_metrics.py  test_summarize.py  test_triage_hint.py
