[project]
name = "hotintel-brain"
version = "0.1.0"
description = "HotIntel Brain — LLM-driven hot-intel judgement service for the HotPulse platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "lumingfan" }]

# Runtime dependencies reflect the repo's current implemented scope:
# - V1: structured LLM calls
# - V2: retrieval / embeddings / reranking
# - V3: single-agent follow-up hint
# Keep model provider scope aligned with ADR 0006 (GPT + Claude only).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "instructor>=1.6",
    "litellm>=1.55",
    "openai>=1.55",
    "anthropic>=0.40",
    "langfuse>=2.55",
    "httpx>=0.27",
    "pymysql>=1.1",
    "python-dotenv>=1.0",
    "pydantic-ai>=1.88",
    "elasticsearch>=8.15",
    "sentence-transformers>=3.3",
    "torch>=2.5",
    "aio-pika>=9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ----------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "eval/datasets", "eval/runs", "infra"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (covered by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
"src/common/models.py" = ["N803", "N815"]
"src/llm/client.py" = ["N815"]
"src/mq/messages.py" = ["N815"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
